[sass] fixing truncate trader name problem

--- a/assets/scss/main.sass
+++ b/assets/scss/main.sass
@@ -634,3 +634,28 @@ input:not([type=button]):not([type=submit]):not([type=reset]):not([type=radio]):
   white-space: nowrap
   overflow: hidden
   text-overflow: ellipsis
+
+.truncate-trader-name
+  width: 160%
+  overflow: hidden
+  text-overflow: ellipsis
+  white-space: nowrap
+  display: inline-block
+
+.row-orders
+  display: table
+  width: 100%
+  table-layout: fixed
+  border-spacing: 10px
+
+.column-orders
+  display: table-cell
+
+.close-sign
+  vertical-align: top
+
+.trader-slot
+  position: relative
+  right: 15px
+  display: inline-block
+  vertical-align: bottom
